--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
 
 }
 
+#inputContainer {
+  padding-bottom: 4px;
+}
+
 #nameInput {
   border: 1px solid #848484;
   -webkit-border-radius: 10px;
@@ -34,7 +38,7 @@ body {
   border-radius: 10px;
   outline:0;
   height:25px;
-  width: 275px;
+  width: 45vw;
   padding-left:10px;
   padding-right:10px;
 }
@@ -70,7 +74,7 @@ body {
   padding-top: 7px;
   padding-bottom: 7px;
   padding-left: 7px;
-  width: 12vw;
+  width: 10vw;
   font-size: small;
 }
 
